Fixed collapsing login button on mobile version when search is running

--- a/web/frontend/styles/navigator.scss
+++ b/web/frontend/styles/navigator.scss
@@ -42,10 +42,15 @@ nav {
     font-size: 1.25rem;
     border: 1px solid $primary;
     padding: 0.3em 0.5em;
+    box-sizing: border-box;
     border-radius: 0.3em;
     transition:
       background-color 0.2s,
       color 0.2s;
+
+    &.login {
+      min-width: 5em;
+    }
 
     &:hover {
       background-color: $primary;
